<resources>
    <string name="app_name">pract13.Chayka.Pr-22.107K</string>
    <string name="ivFire">TODO</string>
    <string name="tvDel">Удалить</string>
    <string name="tvClose">Закрыть</string>
    <string name="ivLogo">TODO</string>
    <string name="ivBackground">TODO</string>
    <string name="tvHi">Привет</string>
    <string name="tvMotivation">Наслаждайся отборочными. Будь внимателен. Делай хорошо.</string>
    <string name="tvReg">Зарегистрируйтесь</string>
    <string name="tvAcc">Ещё нет аккаунта?</string>
    <string name="btnIn">Войти в аккаунт</string>
    <string name="imgBack">TODO</string>
    <string name="imgLogo">TODO</string>
    <string name="tvExit">exit</string>
    <string name="imagevLogo">TODO</string>
    <string name="ivLogotip">TODO</string>
    <string name="imageMenu">TODO</string>
    <string name="imageEmil">TODO</string>
    <string name="ivSea">TODO</string>
    <string name="ivMoon">TODO</string>
    <string name="ivSun">TODO</string>
    <string name="imageFire">TODO</string>
    <string name="btnAdd">+</string>
    <string name="tvEmil">Эмиль</string>
    <string name="ivMusic">TODO</string>
    <string name="ivPeople">TODO</string>
    <string name="tvTime1">11:00</string>
    <string name="ivTime2">15:55</string>
    <string name="ivTime3">19:11</string>
    <string name="tvTime2">11:11</string>
    <string name="Disctiption1">Кратенькое описание блока с двумя строчками</string>
    <string name="tvHeader">Заголовок блока</string>
    <string name="tvDiscription">Заголовок блока</string>
    <string name="tvDiscription2">Кратенькое описание блока с двумя строчками</string>
    <string name="btnMoreInfo">Подробнее</string>
    <string name="btnMoreInfo2">Подробнее</string>
    <string name="ivHeart">TODO</string>
    <string name="ivMeditation">TODO</string>
    <string name="tvvoln">Взволнованным</string>
    <string name="tvSosredotoch">Сосредоточенным</string>
    <string name="tvRelax">Расслабленным</string>
    <string name="tvHow">Каким ты себя ощущаешь сегодня?</string>
    <string name="tvHello">С возвращением, Эмиль!</string>
    <string name="tvSpok">Спокойным</string>
    <string name="imageLogotip">TODO</string>
    <string name="imageMusic">TODO</string>
    <string name="imagePeople">TODO</string>
    <string name="ivEmil">TODO</string>
    <string name="ivMenu">TODO</string>
    <string name="ImagevLogotip">TODO</string>
    <string name="tvSignin">Sign in</string>
    <string name="tvRegister">Register</string>
    <string name="btnsignin">Sign in</string>
    <string name="btnProfile">Профиль</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Пароль</string>
    <string name="imglogotip">TODO</string>
    <string name="imgleaf">TODO</string>
</resources>