<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253334"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="31dp"
            android:layout_height="29dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/baseline_queue_music_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/baseline_queue_music_25"
            android:contentDescription="@string/imageMusic" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/people"
            android:contentDescription="@string/imagePeople" />

        <ImageView
            android:id="@+id/imagevEmile"
            android:layout_width="58dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/ivEmil"
            android:onClick="onClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/emil"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="175dp"
            android:text="@string/tvHello"
            android:textColor="#FEFEFE"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.192" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="175dp"
            android:text="@string/tvHow"
            android:textColor="#FEFEFE"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.319"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="175dp"
            android:text="@string/tvSpok"
            android:textColor="#FEFEFE"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="175dp"
            android:text="@string/tvRelax"
            android:textColor="#FEFEFE"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="175dp"
            android:text="@string/tvSosredotoch"
            android:textColor="#FEFEFE"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.632"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="175dp"
            android:text="@string/tvvoln"
            android:textColor="#FEFEFE"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            tools:ignore="VisualLintOverlap" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="53dp"
            android:layout_height="49dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/baseline_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_menu_24"
            android:contentDescription="@string/ivMenu" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="139dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logos"
            android:contentDescription="@string/ImagevLogotip" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="98dp"
            android:layout_height="57dp"
            android:layout_marginTop="828dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logos"
            android:contentDescription="@string/imageLogotip"
            tools:ignore="VisualLintBounds" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="378dp"
            android:layout_height="178dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView16"
            app:srcCompat="@drawable/photo_2023_06_19_09_45_26"
            android:contentDescription="@string/ivMeditation" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="378dp"
            android:layout_height="178dp"
            android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/photo_2023_06_19_09_45_31"
            android:contentDescription="@string/ivHeart" />

        <Button
            android:id="@+id/button2"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="160dp"
            android:backgroundTint="#253334"
            android:text="@string/btnMoreInfo"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="135dp"
            android:backgroundTint="#253334"
            android:text="@string/btnMoreInfo2"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="120dp"
            android:text="@string/tvHeader"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="250dp"
            android:text="@string/tvDiscription"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tvDiscription2"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="200dp"
            android:text="@string/Disctiption1"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btnRelax"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="120dp"
            android:foreground="@drawable/photo_2023_06_19_09_41_41"
            android:foregroundGravity="fill"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnFocused"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="130dp"
            android:foreground="@drawable/photo_2023_06_19_09_41_45"
            android:foregroundGravity="fill"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnExcited"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="25dp"
            android:foreground="@drawable/photo_2023_06_19_09_41_49"
            android:foregroundGravity="fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnCalm"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="215dp"
            android:foreground="@drawable/photo_2023_06_19_09_41_31"
            android:foregroundGravity="fill"
            android:onClick="onClick"
            app:cornerRadius="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
