<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253334">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="111dp"
        android:layout_height="105dp"
        android:layout_marginTop="40dp"
        android:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logos"
        android:contentDescription="@string/imglogotip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginTop="145dp"
        android:text="@string/tvSignin"
        android:textAlignment="viewStart"
        android:textColor="#FEFEFE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="300dp"
        android:text="@string/tvRegister"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <Button
        android:id="@+id/btnIn"
        android:layout_width="366dp"
        android:layout_height="90dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#7E7C9991"
        android:text="@string/btnsignin"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:backgroundTint="#7B8283"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/etEmail"
        android:textColor="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:autofillHints=""
        android:backgroundTint="#7B8283"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/etPassword"
        android:textColor="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="366dp"
        android:layout_height="90dp"
        android:layout_marginTop="390dp"
        android:backgroundTint="#7E7C9991"
        android:text="@string/btnProfile"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="VisualLintOverlap,VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="247dp"
        android:background="@drawable/leaf"
        android:contentDescription="@string/imgleaf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>